Retirado diretório Vilex desnecessário.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,12 @@
   },
   "autoload": {
     "psr-4": {
-      "Vilex\\": "src/Vilex"
+      "Vilex\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Vilex\\Tests\\": "tests/"
     }
   }
 }
