--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
   ],
   "require": {
     "php": ">=7.1",
-    "zendframework/zend-diactoros": "^2.0",
-    "phpunit/phpunit": "7.3.5"
+    "zendframework/zend-diactoros": "2.0.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7.5"
   },
   "suggest": {
     "dlepera88-php/dlx": "Micro-framework que utiliza a arquitetura Hexagonal (em desenvolvimento)",
